# HallReverb

./: .gitmodules  CMakeLists.txt  README.md
Assets/: CMakeLists.txt
Libs/Freeverb3/: CMakeLists.txt
Libs/Freeverb3/freeverb/: fv3_defs.h  zrev.cpp  zrev2.cpp  zrev2_t.hpp  zrev_t.hpp
Source/: CMakeLists.txt  HallReverb.cpp  HallReverb.h  PluginProcessor.cpp  PluginProcessor.h
